Fix schedule event tag alignment

--- a/src/www/styles.less
+++ b/src/www/styles.less
@@ -807,7 +807,7 @@ code {
                 color: white;
                 justify-content: center;
                 align-items: center;
-                padding: 0 10px;
+                padding-left: 10px;
 
                 h3 {
                     margin: 0;
@@ -833,7 +833,6 @@ code {
                         box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.5);
                         margin-left: 1px;
                         padding: 1px 0.5em;
-                        margin-right: -10px;
                     }
                 }
             }
